turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
for(i<- 0 to colors.length-1){
		if(getCouleurSol()==colors(i){
			setCouleurBrosse(colors(i+1));
		}
	}
for(j<- 0 to rule.length-1){
	if(rule(j)=="R"){
		droite();
		avance();
		baisseBrosse();
		leveBrosse();
		avance();
	}else{
		gauche();
		avance();
		baisseBrosse();
		leveBrosse();
		avance();
	}
}
}
